ClientApp/src/components/DoNothing.css
.wrapper {
    display: flex;
    flex-direction: column;
}

.content {
    border: 1px solid blue;
    width: 98vw;
}

.wrapContent {
    display: table;
    width:100%;
}

.wrapContent > div {
    display: table-cell;
}

body, html {
    height: 100vh;
    min-height: 100vh;
    width: 100vh;
    min-width: 100vh;
}

body {
    background-color: #1e1e1e
}

html {
    font-size: 12px;
}

.test {
    color: white;
}

.seekbar {
    background-color: #000000;
    position: -webkit-sticky;
    position: sticky;
    top: 0px;
    z-index: 1;
    display: flex;
    width: 98vw;
}

.header {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.header-text {
    flex-grow: 0;
    color: #ebf1be
}

.divider {
    flex-grow: 1;
    height: 2px;
    background-color: #e2e2e2;
}

.table {
    background-color: #1e1e1e;
}

.color1 {
    color: #d0df0a;
}

.color2 {
    color: #ebf1be
}

.color3 {
    color: #ebddc5
}

.leftItem {
    min-width: 69vw;
    max-width: 69vw;
}

.rightItem {
    background-color: #000000;
    min-width: 28vw;
    max-width: 28vw;
    height: 100vh;
    position: sticky;
    position: -webkit-sticky;
    top: 40px;
}

.rTopContent {
    position: sticky;
    position: -webkit-sticky;   
    justify-items: center;
}

.imageContainer {
    position: sticky;
    position: -webkit-sticky;
    border: dashed 1px yellow;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 70vh;
}

.rImage {
    position: sticky;
    position: -webkit-sticky;
    text-align: center;
    vertical-align: central;
    max-height: 100%;
    height: auto;
    width: 28vw;
}

.tLowContent {
    height: 30vh;
    position: sticky;
    position: -webkit-sticky;
}

